--- a/src/App.scss
+++ b/src/App.scss
@@ -10,14 +10,13 @@ body{
   background-color: #fff;
   color: #000;
   .input-h3{
-    display: none;
       #lugar-inp{
         border: none;
     }
     
   }
-  .input-show{
-display: flex;
+  .h3-listo{
+    
   }
 
 .asd{
