--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,18 @@ body{
   justify-content: center;
   background-color: #fff;
   color: #000;
+  .primera{
+    position:absolute;
+  top: 2%;
+  right: 2%;
+  .button-theme{
+    img{
+      margin-top: -20%;
+      max-width: 20px;
+      width:fit-content;
+    }
+    }
+  }
   #lugar-inp{
     border: none;
     background-color: #ffffff;
@@ -17,16 +29,7 @@ body{
   .img-lupa{
     width: 10%;
   }
-.asd{
-  position:absolute;
-  top: 2%;
-  right: 2%;
-  img{
-    margin-top: -20%;
-    max-width: 20px;
-    width:fit-content;
-  }
-  }
+
   .footer{
     color: #000000;
     position:absolute;
