--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,11 @@ body{
   /* Estilos para el tema oscuro */
   background-color: #333;
   color: #fff;
+  .primera{
+  .button-theme{
+    background-color: #f3e8b7;
+    }
+  }
   #lugar-inp{
     border: none;
     background-color: #333;
