--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,7 @@ body{
   #lugar-inp{
     border: none;
     background-color: #ffffff;
+    color: #333;
     border-radius: 1rem;
     padding: 1%;
   }
