--- a/src/App.scss
+++ b/src/App.scss
@@ -22,8 +22,8 @@ body{
     background-image: url('https://radiomitre-la100-prod.cdn.arcpublishing.com/resizer/3Gz1mgh1-jpEljuPb27L10Hu09c=/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/radiomitre/VNSSNIBWFRELXKS77Y56OR3RTU.png');
     background-repeat: no-repeat;
     background-size: cover;
-  
-    
+    width: 120%;
+    min-height: 500px;
     .primera{
       position:absolute;
       top: 5%;
