--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 
 body{
+  overflow: hidden;
+
   height: 100vh;
   width: 100vw; 
    display: flex;
@@ -89,15 +91,15 @@ body{
 
 .dark {
   /* Estilos para el tema oscuro */
+  /* Estilos para el tema oscuro */
+  overflow: hidden;
   background-color: #333;
   color: #fff;
   background-image: none;
 
   .containeres{
-    border: 1px solid rgba(6, 5, 5, 0.267);
+    
     border-radius: 1rem;
-    padding: 20%;
-    margin-top: 30%;
     background-color: #f2e3e30e;
     box-shadow: 1px 1px 20px 1px rgba(0, 0, 0, 0.398);
     background-image: none;
